all projects changed to odd-numbered styling

--- a/index.html
+++ b/index.html
@@ -311,27 +311,33 @@
             </div>
           </div>
           <!--  -->
-          <div class="project project-even">
+          <div class="project project-odd">
             <div class="project-details">
               <div class="tagline">
                 <div class="inset-tagline">Featured Project</div>
                 <div class="project-name">Adventure Game</div>
-                <div class="description-even">
+                <div class="description-odd">
                   A point-and-click game where players explore an expansive map,
-                  collecting items and solving puzzles. Images are made
-                  interactive using 'image-maps', navigation is accomplished
-                  with 'react-router', and a SQL database is used to save
-                  game-state.
+                  collecting items and solving puzzles.<span
+                    class="second-project-sentence"
+                  >
+                    Images are made interactive using 'image-maps', navigation
+                    is accomplished with 'react-router', and a SQL database is
+                    used to save game-state.</span
+                  >
+                  <span class="expand-project-button"
+                    >click to expand . . .</span
+                  >
                 </div>
               </div>
               <div class="tech-container">
-                <ul class="tech tech-even">
+                <ul class="tech tech-odd">
                   <li>React</li>
                   <li>Node.js</li>
                   <li>PostgreSQL</li>
                 </ul>
               </div>
-              <div class="links links-even">
+              <div class="links links-odd">
                 <ul>
                   <li>
                     <a
@@ -458,27 +464,32 @@
             </div>
           </div>
           <!--  -->
-          <div class="project project-even">
+          <div class="project project-odd">
             <div class="project-details">
               <div class="tagline">
                 <div class="inset-tagline">Featured Project</div>
                 <div class="project-name">Kids Learning Site</div>
-                <div class="description-even">
+                <div class="description-odd">
                   An educational app for learning about Mars rover missions.
-                  Faux 3-D animated globe built using CSS, interactive map
-                  produced using NASA 'geoJSON' data and Javascript's 'canvas'
-                  API, and dynamic timeline made using data from the NASA Mars
-                  Rover API.
+                  <span class="second-project-sentence"
+                    >Faux 3-D animated globe built using CSS, interactive map
+                    produced using NASA 'geoJSON' data and Javascript's 'canvas'
+                    API, and dynamic timeline made using data from the NASA Mars
+                    Rover API.</span
+                  >
+                  <span class="expand-project-button"
+                    >click to expand . . .</span
+                  >
                 </div>
               </div>
               <div class="tech-container">
-                <ul class="tech tech-even">
+                <ul class="tech tech-odd">
                   <li>Javascript</li>
                   <li>jQuery</li>
                   <li>HTML/CSS</li>
                 </ul>
               </div>
-              <div class="links links-even">
+              <div class="links links-odd">
                 <ul>
                   <li>
                     <a
