added functionality for second sentence button for all projects

--- a/index.html
+++ b/index.html
@@ -392,10 +392,16 @@
                 <div class="project-name">Chat App</div>
                 <div class="description-odd">
                   A Real-time chat application to schedule and have private
-                  conversation between two or more users. Socket connections are
-                  made using a node server and 'socket.io', while user data -
-                  including contacts and message histories - are stored in a
-                  noSQL database.
+                  conversation between two or more users.<span
+                    class="second-project-sentence"
+                  >
+                    Socket connections are made using a node server and
+                    'socket.io', while user data - including contacts and
+                    message histories - are stored in a noSQL database.</span
+                  >
+                  <span class="expand-project-button"
+                    >click to expand . . .</span
+                  >
                 </div>
               </div>
               <div class="tech-container">
