added left and right pagination buttons to slideshows

--- a/index.html
+++ b/index.html
@@ -279,34 +279,10 @@
                     <img src="./assets/crypto-image-7-squared.png" />
                   </div>
                 </div>
-                <!-- <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div> -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
                 <div class="swiper-pagination"></div>
               </div>
-
-              <!--  -->
-              <!-- <div class="slideshow-container">
-                <img
-                  class="slideshow-image"
-                  src="./assets/crypto_screenshot_1.png"
-                  alt="MarsRoverSite"
-                />
-                <img
-                  class="slideshow-image"
-                  src="./assets/crypto-image2.png"
-                  alt="MarsRoverSite"
-                />
-                <img
-                  class="slideshow-image"
-                  src="./assets/crypto-image-3.png"
-                  alt="MarsRoverSite"
-                />
-                <div class="slideshow-nav-bar">
-                  <div class="0"></div>
-                  <div class="1"></div>
-                  <div class="2"></div>
-                </div>
-              </div> -->
               <!--  -->
             </div>
           </div>
@@ -378,8 +354,8 @@
                     <img src="./assets/game-image5-squared.png" />
                   </div>
                 </div>
-                <!-- <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div> -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
                 <div class="swiper-pagination"></div>
               </div>
             </div>
@@ -463,8 +439,8 @@
                     <img src="./assets/chat-image-7-squared.png" />
                   </div>
                 </div>
-                <!-- <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div> -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
                 <div class="swiper-pagination"></div>
               </div>
             </div>
@@ -542,8 +518,8 @@
                     <img src="./assets/mars-image-7-squared.png" />
                   </div>
                 </div>
-                <!-- <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div> -->
+                <div class="swiper-button-next"></div>
+                <div class="swiper-button-prev"></div>
                 <div class="swiper-pagination"></div>
               </div>
             </div>
