get in contact width scales

--- a/index.html
+++ b/index.html
@@ -154,9 +154,8 @@
           <div class="intro-blurb">
             As a former scientist and university instructor, I bring a deep
             curiosity and creative perspective to web development. Click the
-            links above or scroll down to learn more about me and
-            <br />
-            what I am currently up to.
+            links above or scroll down to learn more about me and what I am
+            currently up to.
           </div>
         </div>
         <section id="about">
@@ -534,7 +533,7 @@
             (button below). Thanks for visiting.
           </div>
           <div class="contact-me-button-container">
-            <a class="hello-button" href="mailto:matthew.volny@gmail.com"
+            <a id="hello-button" href="mailto:matthew.volny@gmail.com"
               >Say Hello</a
             >
           </div>
