resize project and project-details elements for projects with more text

--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
             </div>
           </div>
           <!--  -->
-          <div class="project project-odd">
+          <div class="project project-odd" id="project-3">
             <div class="project-details">
               <div class="tagline">
                 <div class="inset-tagline">Featured Project</div>
@@ -445,7 +445,7 @@
             </div>
           </div>
           <!--  -->
-          <div class="project project-odd">
+          <div class="project project-odd" id="project-4">
             <div class="project-details">
               <div class="tagline">
                 <div class="inset-tagline">Featured Project</div>
