altered contact me link

--- a/index.html
+++ b/index.html
@@ -533,7 +533,11 @@
             (button below). Thanks for visiting.
           </div>
           <div class="contact-me-button-container">
-            <a id="hello-button" href="mailto:matthew.volny@gmail.com"
+            <a
+              id="hello-button"
+              href="mailto:matthew.volny@gmail.com"
+              rel="noopener noreferrer"
+              target="_blank"
               >Say Hello</a
             >
           </div>
