improved contact me link, added slight border around project image slideshows

--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
             </div>
             <div class="profile-image-container">
               <!-- <div class="profile-image-inner-container"> -->
-              <img src="./assets/scooter-muppet.png" alt="" />
+              <img class="my-photo" src="./assets/scooter-muppet.png" alt="" />
               <img
                 class="profile-image-background"
                 src="./assets/scooter-background.png"
