added links to demo videos

--- a/index.html
+++ b/index.html
@@ -241,12 +241,11 @@
                     /></a>
                   </li>
                   <li>
-                    <a class="project-link-image-container" href=""
-                      ><img
-                        src="./assets/icons8-external-link.svg"
-                        target="_blank"
-                        alt=""
-                      />
+                    <a
+                      class="project-link-image-container"
+                      href="https://youtu.be/t52cM2tqSmM"
+                      target="_blank"
+                      ><img src="./assets/icons8-external-link.svg" alt="" />
                     </a>
                   </li>
                 </ul>
@@ -325,7 +324,7 @@
                   <li>
                     <a
                       class="project-link-image-container"
-                      href="https://rocky-savannah-82037.herokuapp.com/"
+                      href="https://youtu.be/OKGTxp81Uuk"
                       target="_blank"
                       ><img src="./assets/icons8-external-link.svg" alt="" />
                     </a>
@@ -392,21 +391,16 @@
                     <a
                       class="project-link-image-container"
                       href="https://github.com/matthewvolny/Chat-App"
-                      ><img
-                        src="./assets/icons8-github.svg"
-                        target="_blank"
-                        alt="github_icon"
+                      target="_blank"
+                      ><img src="./assets/icons8-github.svg" alt="github_icon"
                     /></a>
                   </li>
                   <li>
                     <a
                       class="project-link-image-container"
-                      href="https://chatworm.herokuapp.com/"
-                      ><img
-                        src="./assets/icons8-external-link.svg"
-                        target="_blank"
-                        alt=""
-                      />
+                      href="https://youtu.be/m6ZuIWUwU3o"
+                      target="_blank"
+                      ><img src="./assets/icons8-external-link.svg" alt="" />
                     </a>
                   </li>
                 </ul>
@@ -483,7 +477,7 @@
                   <li>
                     <a
                       class="project-link-image-container"
-                      href="https://dulcet-druid-afa521.netlify.app/"
+                      href="https://youtu.be/GniX_9JT0Hg"
                       target="_blank"
                       ><img src="./assets/icons8-external-link.svg" alt="" />
                     </a>
