added page load animations

--- a/index.html
+++ b/index.html
@@ -70,11 +70,15 @@
         </div>
         <nav class="main-nav">
           <ul>
-            <li><a class="nav-button about" href="#about">About</a></li>
-            <li>
+            <li id="about-nav-animation">
+              <a class="nav-button about" href="#about">About</a>
+            </li>
+            <li id="portfolio-nav-animation">
               <a class="nav-button portfolio" href="#portfolio">Portfolio</a>
             </li>
-            <li><a class="nav-button contact" href="#contact">Contact</a></li>
+            <li id="contact-nav-animation">
+              <a class="nav-button contact" href="#contact">Contact</a>
+            </li>
             <li id="resume">
               <a href="./public/Matthew Volny - Resume.pdf" target="_blank"
                 >Resume</a
@@ -534,6 +538,7 @@
               target="_blank"
               >Say Hello</a
             >
+            <a href="mailto:someone@mozilla.org">Mail me</a>
           </div>
         </section>
       </main>
