added color change animation to sidebar link icons

--- a/index.html
+++ b/index.html
@@ -120,28 +120,56 @@
       </nav>
       <div class="sidebar">
         <ul>
-          <li>
-            <a href="https://github.com/matthewvolny" target="_blank"
+          <li id="icons-transition-container">
+            <a
+              class="bottom"
+              href="https://github.com/matthewvolny"
+              target="_blank"
+              ><img
+                class="sidebar-icon"
+                src="./assets/github-icon-colored.png"
+                alt="github icon" /></a
+            ><a
+              class="top"
+              href="https://github.com/matthewvolny"
+              target="_blank"
               ><img
                 class="sidebar-icon"
                 src="./assets/icons8-github.svg"
                 alt="github icon"
-            /></a>
+              />
+            </a>
           </li>
-          <li>
-            <a href="https://codepen.io/mvolny" target="_blank"
+          <li id="icons-transition-container">
+            <a class="bottom" href="https://codepen.io/mvolny" target="_blank"
               ><img
-                class="sidebar-icon"
+                class="sidebar-icon codepen-icon"
+                src="./assets/codepen-icon-colored.png"
+                alt="codepen icon"
+            /></a>
+            <a class="top" href="https://codepen.io/mvolny" target="_blank"
+              ><img
+                class="sidebar-icon codepen-icon"
                 src="./assets/icons8-codepen.svg"
                 alt="codepen icon"
             /></a>
           </li>
-          <li>
+          <li id="icons-transition-container">
             <a
+              class="bottom"
               href="https://www.linkedin.com/in/matthew-volny-a12965138/"
               target="_blank"
               ><img
-                class="sidebar-icon"
+                class="sidebar-icon linkedIn-icon"
+                src="./assets/linkedin-icon-colored.png"
+                alt="linkedIn icon"
+            /></a>
+            <a
+              class="top"
+              href="https://www.linkedin.com/in/matthew-volny-a12965138/"
+              target="_blank"
+              ><img
+                class="sidebar-icon linkedIn-icon"
                 src="./assets/icons8-linkedin.svg"
                 alt="linkedIn icon"
             /></a>
