added animations for footer links

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
               target="_blank"
               ><img
                 class="sidebar-icon"
-                src="./assets/icons8-github.svg"
+                src="./assets/github-icon.png"
                 alt="github icon"
               />
             </a>
@@ -150,7 +150,7 @@
             <a class="top" href="https://codepen.io/mvolny" target="_blank"
               ><img
                 class="sidebar-icon codepen-icon"
-                src="./assets/icons8-codepen.svg"
+                src="./assets/codepen-icon.png"
                 alt="codepen icon"
             /></a>
           </li>
@@ -170,7 +170,7 @@
               target="_blank"
               ><img
                 class="sidebar-icon linkedIn-icon"
-                src="./assets/icons8-linkedin.svg"
+                src="./assets/linkedin-icon.png"
                 alt="linkedIn icon"
             /></a>
           </li>
@@ -262,22 +262,36 @@
               </div>
               <div class="links links-odd">
                 <ul>
-                  <li>
+                  <li id="icons-transition-container-project-description">
                     <a
-                      class="project-link-image-container"
+                      class="project-link-image-container project-description-link-bottom"
                       href="https://github.com/matthewvolny/Crypto_App"
                       ><img
-                        src="./assets/icons8-github.svg"
+                        src="./assets/github-icon-colored.png"
+                        target="_blank"
+                        alt="github_icon"
+                    /></a>
+                    <a
+                      class="project-link-image-container project-description-link-top"
+                      href="https://github.com/matthewvolny/Crypto_App"
+                      ><img
+                        src="./assets/github-icon.png"
                         target="_blank"
                         alt="github_icon"
                     /></a>
                   </li>
-                  <li>
+                  <li id="icons-transition-container-project-description">
                     <a
-                      class="project-link-image-container"
+                      class="project-link-image-container project-description-link-bottom"
                       href="https://youtu.be/t52cM2tqSmM"
                       target="_blank"
-                      ><img src="./assets/icons8-external-link.svg" alt="" />
+                      ><img src="./assets/external-link-colored.png" alt="" />
+                    </a>
+                    <a
+                      class="project-link-image-container project-description-link-top"
+                      href="https://youtu.be/t52cM2tqSmM"
+                      target="_blank"
+                      ><img src="./assets/external-link-icon.png" alt="" />
                     </a>
                   </li>
                 </ul>
@@ -345,20 +359,34 @@
               </div>
               <div class="links links-odd">
                 <ul>
-                  <li>
+                  <li id="icons-transition-container-project-description">
                     <a
-                      class="project-link-image-container"
+                      class="project-link-image-container project-description-link-bottom"
                       href="https://github.com/matthewvolny/Point-and-click-game"
                       target="_blank"
-                      ><img src="./assets/icons8-github.svg" alt="github_icon"
+                      ><img
+                        src="./assets/github-icon-colored.png"
+                        alt="github_icon"
+                    /></a>
+                    <a
+                      class="project-link-image-container project-description-link-top"
+                      href="https://github.com/matthewvolny/Point-and-click-game"
+                      target="_blank"
+                      ><img src="./assets/github-icon.png" alt="github_icon"
                     /></a>
                   </li>
-                  <li>
+                  <li id="icons-transition-container-project-description">
                     <a
-                      class="project-link-image-container"
+                      class="project-link-image-container project-description-link-bottom"
                       href="https://youtu.be/OKGTxp81Uuk"
                       target="_blank"
-                      ><img src="./assets/icons8-external-link.svg" alt="" />
+                      ><img src="./assets/external-link-colored.png" alt="" />
+                    </a>
+                    <a
+                      class="project-link-image-container project-description-link-top"
+                      href="https://youtu.be/OKGTxp81Uuk"
+                      target="_blank"
+                      ><img src="./assets/external-link-icon.png" alt="" />
                     </a>
                   </li>
                 </ul>
@@ -419,20 +447,34 @@
               </div>
               <div class="links links-odd">
                 <ul>
-                  <li>
+                  <li id="icons-transition-container-project-description">
                     <a
-                      class="project-link-image-container"
+                      class="project-link-image-container project-description-link-bottom"
                       href="https://github.com/matthewvolny/Chat-App"
                       target="_blank"
-                      ><img src="./assets/icons8-github.svg" alt="github_icon"
+                      ><img
+                        src="./assets/github-icon-colored.png"
+                        alt="github_icon"
+                    /></a>
+                    <a
+                      class="project-link-image-container project-description-link-top"
+                      href="https://github.com/matthewvolny/Chat-App"
+                      target="_blank"
+                      ><img src="./assets/github-icon.png" alt="github_icon"
                     /></a>
                   </li>
-                  <li>
+                  <li id="icons-transition-container-project-description">
                     <a
-                      class="project-link-image-container"
+                      class="project-link-image-container project-description-link-bottom"
                       href="https://youtu.be/m6ZuIWUwU3o"
                       target="_blank"
-                      ><img src="./assets/icons8-external-link.svg" alt="" />
+                      ><img src="./assets/external-link-colored.png" alt="" />
+                    </a>
+                    <a
+                      class="project-link-image-container project-description-link-top"
+                      href="https://youtu.be/m6ZuIWUwU3o"
+                      target="_blank"
+                      ><img src="./assets/external-link-icon.png" alt="" />
                     </a>
                   </li>
                 </ul>
@@ -498,20 +540,34 @@
               </div>
               <div class="links links-odd">
                 <ul>
-                  <li>
+                  <li id="icons-transition-container-project-description">
                     <a
-                      class="project-link-image-container"
+                      class="project-link-image-container project-description-link-bottom"
                       href="https://github.com/matthewvolny/Mars-Rover-Learning-App"
                       target="_blank"
-                      ><img src="./assets/icons8-github.svg" alt="github_icon"
+                      ><img
+                        src="./assets/github-icon-colored.png"
+                        alt="github_icon"
+                    /></a>
+                    <a
+                      class="project-link-image-container project-description-link-top"
+                      href="https://github.com/matthewvolny/Mars-Rover-Learning-App"
+                      target="_blank"
+                      ><img src="./assets/github-icon.png" alt="github_icon"
                     /></a>
                   </li>
-                  <li>
+                  <li id="icons-transition-container-project-description">
                     <a
-                      class="project-link-image-container"
+                      class="project-link-image-container project-description-link-bottom"
                       href="https://youtu.be/GniX_9JT0Hg"
                       target="_blank"
-                      ><img src="./assets/icons8-external-link.svg" alt="" />
+                      ><img src="./assets/external-link-colored.png" alt="" />
+                    </a>
+                    <a
+                      class="project-link-image-container project-description-link-top"
+                      href="https://youtu.be/GniX_9JT0Hg"
+                      target="_blank"
+                      ><img src="./assets/external-link-icon.png" alt="" />
                     </a>
                   </li>
                 </ul>
@@ -572,57 +628,167 @@
       </main>
       <div class="footer">
         <div class="built-by">Built by Matthew Volny</div>
-        <!--  -->
-        <div class="footer-links">
-          <a
-            id="site-links-smaller-widths"
-            class="personal-site-links site-links-smaller-widths"
-            href="https://github.com/matthewvolny"
-            target="_blank"
-            ><img
-              class="sidebar-icon"
-              src="./assets/icons8-github.svg"
-              alt="github icon"
-          /></a>
+        <ul class="footer-links">
+          <li id="footer-icons-container">
+            <a
+              class="personal-site-links footer-link-bottom"
+              href="https://github.com/matthewvolny/Personal-Site"
+              target="_blank"
+              ><img
+                class="personal-site-github-link"
+                src="./assets/code-fork-icon-colored.png"
+                alt=""
+            /></a>
+            <a
+              class="personal-site-links footer-link-top"
+              href="https://github.com/matthewvolny/Personal-Site"
+              target="_blank"
+              ><img
+                class="personal-site-github-link"
+                src="./assets/code-fork-icon.png"
+                alt=""
+            /></a>
+          </li>
 
-          <a
-            id="site-links-smaller-widths"
-            class="personal-site-links"
-            href="https://codepen.io/mvolny"
-            target="_blank"
-            ><img
-              class="sidebar-icon"
-              src="./assets/icons8-codepen.svg"
-              alt="codepen icon"
-          /></a>
-
-          <a
-            id="site-links-smaller-widths"
-            class="personal-site-links"
-            href="https://www.linkedin.com/in/matthew-volny-a12965138/"
-            target="_blank"
-            ><img
-              class="sidebar-icon"
-              src="./assets/icons8-linkedin.svg"
-              alt="linkedIn icon"
-          /></a>
-
+          <li
+            id="show-new-footer-link1"
+            class="footer-icons-container site-links-appearing-at-smaller-widths"
+          >
+            <a
+              class="personal-site-links footer-link-bottom"
+              href="https://github.com/matthewvolny"
+              target="_blank"
+              ><img
+                class="previously-sidebar-footer-icon"
+                src="./assets/github-icon-colored.png"
+                alt=""
+            /></a>
+            <a
+              class="personal-site-links footer-link-top"
+              href="https://github.com/matthewvolny"
+              target="_blank"
+              ><img
+                class="previously-sidebar-footer-icon"
+                src="./assets/github-icon.png"
+                alt=""
+            /></a>
+          </li>
+          <li
+            id="show-new-footer-link2"
+            class="footer-icons-container site-links-appearing-at-smaller-widths"
+          >
+            <a
+              class="personal-site-links footer-link-bottom"
+              href="https://codepen.io/mvolny"
+              target="_blank"
+              ><img
+                class="previously-sidebar-footer-icon"
+                src="./assets/codepen-icon-colored.png"
+                alt=""
+            /></a>
+            <a
+              class="personal-site-links footer-link-top"
+              href="https://codepen.io/mvolny"
+              target="_blank"
+              ><img
+                class="previously-sidebar-footer-icon"
+                src="./assets/codepen-icon.png"
+                alt=""
+            /></a>
+          </li>
+          <li
+            id="show-new-footer-link3"
+            class="footer-icons-container site-links-appearing-at-smaller-widths"
+          >
+            <a
+              class="personal-site-links footer-link-bottom"
+              href="https://www.linkedin.com/in/matthew-volny-a12965138/"
+              target="_blank"
+              ><img
+                class="previously-sidebar-footer-icon"
+                src="./assets/linkedin-icon-colored.png"
+                alt=""
+            /></a>
+            <a
+              class="personal-site-links footer-link-top"
+              href="https://www.linkedin.com/in/matthew-volny-a12965138/"
+              target="_blank"
+              ><img
+                class="previously-sidebar-footer-icon"
+                src="./assets/linkedin-icon.png"
+                alt=""
+            /></a>
+          </li>
           <!--  -->
-          <a
-            class="personal-site-links"
-            href="https://github.com/matthewvolny/Personal-Site"
-            target="_blank"
-            ><img
-              class="personal-site-github-link"
-              src="./assets/iconmonstr-code-fork-1.svg"
-              alt=""
-          /></a>
-        </div>
+          <!-- <li id="footer-icons-container">
+            <a
+              id="site-links-smaller-widths"
+              class="personal-site-links footer-link-bottom"
+              href="https://github.com/matthewvolny"
+              target="_blank"
+              ><img
+                class="sidebar-icon"
+                src="./assets/github-icon-colored.png"
+                alt="github icon"
+            /></a>
+            <a
+              id="site-links-smaller-widths"
+              class="personal-site-links footer-link-top"
+              href="https://github.com/matthewvolny"
+              target="_blank"
+              ><img
+                class="sidebar-icon"
+                src="./assets/github-icon.png"
+                alt="github icon"
+            /></a>
+          </li> -->
+          <!-- <li id="footer-icons-container">
+            <a
+              id="site-links-smaller-widths"
+              class="personal-site-links footer-link-bottom"
+              href="https://codepen.io/mvolny"
+              target="_blank"
+              ><img
+                class="sidebar-icon"
+                src="./assets/codepen-icon-colored.png"
+                alt="codepen icon"
+            /></a>
+            <a
+              id="site-links-smaller-widths"
+              class="personal-site-links footer-link-top"
+              href="https://codepen.io/mvolny"
+              target="_blank"
+              ><img
+                class="sidebar-icon"
+                src="./assets/codepen-icon.png"
+                alt="codepen icon"
+            /></a>
+          </li> -->
+          <!-- <li id="footer-icons-container">
+            <a
+              id="site-links-smaller-widths"
+              class="personal-site-links footer-link-bottom"
+              href="https://www.linkedin.com/in/matthew-volny-a12965138/"
+              target="_blank"
+              ><img
+                class="sidebar-icon"
+                src="./assets/linkedin-icon-colored.png"
+                alt="linkedIn icon"
+            /></a>
+            <a
+              id="site-links-smaller-widths"
+              class="personal-site-links footer-link-top"
+              href="https://www.linkedin.com/in/matthew-volny-a12965138/"
+              target="_blank"
+              ><img
+                class="sidebar-icon"
+                src="./assets/linkedin-icon.png"
+                alt="linkedIn icon"
+            /></a>
+          </li> -->
+        </ul>
       </div>
     </div>
-    <!--  -->
-    <!-- 
- -->
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./scripts.js"></script>
