reduced logo size at 935px

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </nav>
         <nav class="main-nav hamburger-nav">
           <ul>
-            <li>
+            <li id="hamburger-li">
               <div id="nav-icon3">
                 <span></span>
                 <span></span>
