added gradient map overlap image with animation

--- a/index.html
+++ b/index.html
@@ -218,7 +218,13 @@
             </div>
             <div class="profile-image-container">
               <!-- <div class="profile-image-inner-container"> -->
-              <img class="my-photo" src="./assets/scooter-muppet.png" alt="" />
+              <div class="my-photo-container">
+                <img
+                  class="my-photo-overlay"
+                  src="./assets/gradient-map-image.png"
+                />
+                <img class="my-photo" src="./assets/self-portrait.png" alt="" />
+              </div>
               <img
                 class="profile-image-background"
                 src="./assets/scooter-background.png"
