--- a/index.html
+++ b/index.html
@@ -221,13 +221,22 @@
               <div class="my-photo-container">
                 <img
                   class="my-photo-overlay"
-                  src="./assets/gradient-map-image.png"
+                  src="./assets/gradient-map-newest.png"
                 />
-                <img class="my-photo" src="./assets/self-portrait.png" alt="" />
+                <img
+                  class="my-photo"
+                  src="./assets/portrait-colored-background.png"
+                  alt=""
+                />
               </div>
               <img
                 class="profile-image-background"
                 src="./assets/scooter-background.png"
+                alt=""
+              />
+              <img
+                class="profile-image-background-two"
+                src="./assets/chevron-pattern.png"
                 alt=""
               />
               <!-- </div> -->
