added sample mailtto links to test

--- a/index.html
+++ b/index.html
@@ -639,6 +639,14 @@
             >
             <a href="mailto:someone@mozilla.org">Mail me</a>
           </div>
+          <a href="mailto:someone@mozilla.org">Mail me</a>
+          <a
+            class="email-link"
+            href="mailto:brittany.chiang@gmail.com"
+            rel="noopener noreferrer"
+            target="_blank"
+            >Say Hello</a
+          >
         </section>
       </main>
       <div class="footer">
