repaired contact-me button by removing class of contact in parent container

--- a/index.html
+++ b/index.html
@@ -621,7 +621,8 @@
             </div>
           </div>
         </section>
-        <section id="contact" class="contact">
+        </div>
+        <section id="contact">
           <div class="title"><span class="number">3.</span>Get In Touch</div>
           <div class="contact-me-paragraph">
             If you like my work, please reach out! I am currently looking for
@@ -637,16 +638,9 @@
               target="_blank"
               >Say Hello</a
             >
-            <a href="mailto:someone@mozilla.org">Mail me</a>
+           
           </div>
-          <a href="mailto:someone@mozilla.org">Mail me</a>
-          <a
-            class="email-link"
-            href="mailto:brittany.chiang@gmail.com"
-            rel="noopener noreferrer"
-            target="_blank"
-            >Say Hello</a
-          >
+    
         </section>
       </main>
       <div class="footer">
@@ -742,77 +736,9 @@
                 alt=""
             /></a>
           </li>
-          <!--  -->
-          <!-- <li id="footer-icons-container">
-            <a
-              id="site-links-smaller-widths"
-              class="personal-site-links footer-link-bottom"
-              href="https://github.com/matthewvolny"
-              target="_blank"
-              ><img
-                class="sidebar-icon"
-                src="./assets/github-icon-colored.png"
-                alt="github icon"
-            /></a>
-            <a
-              id="site-links-smaller-widths"
-              class="personal-site-links footer-link-top"
-              href="https://github.com/matthewvolny"
-              target="_blank"
-              ><img
-                class="sidebar-icon"
-                src="./assets/github-icon.png"
-                alt="github icon"
-            /></a>
-          </li> -->
-          <!-- <li id="footer-icons-container">
-            <a
-              id="site-links-smaller-widths"
-              class="personal-site-links footer-link-bottom"
-              href="https://codepen.io/mvolny"
-              target="_blank"
-              ><img
-                class="sidebar-icon"
-                src="./assets/codepen-icon-colored.png"
-                alt="codepen icon"
-            /></a>
-            <a
-              id="site-links-smaller-widths"
-              class="personal-site-links footer-link-top"
-              href="https://codepen.io/mvolny"
-              target="_blank"
-              ><img
-                class="sidebar-icon"
-                src="./assets/codepen-icon.png"
-                alt="codepen icon"
-            /></a>
-          </li> -->
-          <!-- <li id="footer-icons-container">
-            <a
-              id="site-links-smaller-widths"
-              class="personal-site-links footer-link-bottom"
-              href="https://www.linkedin.com/in/matthew-volny-a12965138/"
-              target="_blank"
-              ><img
-                class="sidebar-icon"
-                src="./assets/linkedin-icon-colored.png"
-                alt="linkedIn icon"
-            /></a>
-            <a
-              id="site-links-smaller-widths"
-              class="personal-site-links footer-link-top"
-              href="https://www.linkedin.com/in/matthew-volny-a12965138/"
-              target="_blank"
-              ><img
-                class="sidebar-icon"
-                src="./assets/linkedin-icon.png"
-                alt="linkedIn icon"
-            /></a>
-          </li> -->
         </ul>
       </div>
     </div>
-
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./scripts.js"></script>
   </body>
