moved location of new portrait, and revised media queries affecing it

--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 am comfortable working in a primarily front-end role, though I
                 am interested in expanding my knowledge of server-side
                 programming as well. I am naturally inquisitive, comfortable
-                problem solving solving, and truly love transforming rough ideas
+                problem solving, and truly love transforming rough ideas
                 to fully-featured applications through code.
               </div>
               <div class="skills">
