--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
               <a class="nav-button contact" href="#contact">Contact</a>
             </li>
             <li id="resume">
-              <a href="./public/Matthew Volny - Resume.pdf" target="_blank"
+              <a href="./public/Matthew_Volny_Resume.pdf" target="_blank"
                 >Resume</a
               >
             </li>
